0031782: Modeling Algorithms - Regressions on VS 2019 (vc142) on fillet tests

ChFiKPart_ComputeData_FilPlnCyl.cxx - rewriting some code to avoid "extra" optimization